brew install sed and add it to the path

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,9 @@ script:
       export LIBTOOL=glibtool
       brew list icu4c 
       brew link icu4c --force
-      brew list libtommath 
+      brew list libtommath
+      brew uninstall gnu-sed
+      brew install gnu-sed --with-default-names
       icu-config --cppflags --prefix
       CFLAGS=-I/usr/local/Cellar/icu4c/include
       LDFLAGS=-L/usr/local/Cellar/icu4c/lib
