--- a/.travis.yml
+++ b/.travis.yml
@@ -47,8 +47,7 @@ script:
       export LIBTOOL=glibtool
       brew list icu4c 
       brew link icu4c --force
-      brew list libtommath
-      brew uninstall gnu-sed
+      brew list libtommath      
       brew install gnu-sed --with-default-names
       icu-config --cppflags --prefix
       CFLAGS=-I/usr/local/Cellar/icu4c/include
@@ -63,9 +62,11 @@ script:
       make
       make install
       cd ..
-      alias sed=gsed
+      #alias sed=gsed
       which sed
       sed --version
+      echo $PATH | grep -q '/usr/local/bin'; [ $? -ne 0 ] && export PATH=/usr/local/bin:$PATH
+      echo a | sed 's_A_X_i'
       ./autogen.sh --disable-raw-devices 
       make 
     fi 
