--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,7 @@ script:
       icu-config --cppflags --prefix
       CFLAGS=-I/usr/local/Cellar/icu4c/include
       LDFLAGS=-L/usr/local/Cellar/icu4c/lib
+      DYLD_LIBRARY_PATH=/usr/local/Cellar/icu4c/lib
       export CXXFLAGS="-std=c++11 -stdlib=libc++ -Wno-c++11-narrowing -msse4"
       export CXX=clang++
       export CC=clang
