--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,8 @@ script:
       ls /usr/local/opt/icu4c/lib
       export DYLD_LIBRARY_PATH=/usr/local/opt/icu4c/lib:$DYLD_LIBRARY_PATH
       echo $DYLD_LIBRARY_PATH
+      DYLD_FALLBACK_LIBRARY_PATH=/usr/local/opt/icu4c/lib
+      export DYLD_FALLBACK_LIBRARY_PATH
       export CXXFLAGS="-std=c++11 -stdlib=libc++ -Wno-c++11-narrowing -msse4"
       export CXX=clang++
       export CC=clang
