--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,12 @@ matrix:
   include:
   - os: osx
     osx_image: xcode9.2
-  - os: linux 
+  - os: linux
+    compiler:clang
+  - os: linux
+    compiler:gcc
+    
+  
 
 language: cpp
 
